clear doc api, remove unused route
